my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENALLOC/T_ENALLOC-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENALLOC_STRUCT_H
#define T_ENALLOC_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENALLOC(void);


#endif /* not T_ENALLOC_STRUCT_H */
